minor alignment error fixed

--- a/css/master.css
+++ b/css/master.css
@@ -264,7 +264,6 @@ p {
   background: none;
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: 2rem;
   grid-row-gap: 0.75rem;
 }
 .listview-wrap .request-wrap p {
