--- a/scss/listview.scss
+++ b/scss/listview.scss
@@ -51,7 +51,6 @@
       background: none;
       display: grid;
       grid-template-columns: 1fr;
-      grid-auto-rows: 2rem;
       grid-row-gap: .75rem;
 
       p {
